{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 199,
  "lineage": "28dbdaec-1447-cb18-e83e-4005b7e00fb9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-001a473fa2df55b15",
            "public_dns": "ec2-174-129-7-234.compute-1.amazonaws.com",
            "public_ip": "174.129.7.234",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "natGW"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:963489515162:instance/i-0ef77429bb97bfdf8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef77429bb97bfdf8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myBashtonKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0adec15a2122947f4",
            "private_dns": "ip-10-0-4-68.ec2.internal",
            "private_ip": "10.0.4.68",
            "public_dns": "ec2-54-82-14-228.compute-1.amazonaws.com",
            "public_ip": "54.82.14.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-019d7283e4be84f3a",
                "volume_size": 9,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f31edc791edb1f10",
            "tags": {
              "Name": "app-server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c012741fdf9ea354"
            ]
          },
          "dependencies": [
            "aws_instance.bashton",
            "aws_key_pair.myBashtonKey",
            "aws_security_group.allow-ssh",
            "aws_subnet.priv-subnet-4",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:963489515162:instance/i-037ca32e3a58c4f68",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037ca32e3a58c4f68",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myBashtonKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09774582a0da5a2e6",
            "private_dns": "ip-10-0-4-188.ec2.internal",
            "private_ip": "10.0.4.188",
            "public_dns": "ec2-34-204-10-222.compute-1.amazonaws.com",
            "public_ip": "34.204.10.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ae561350def1f6e7",
                "volume_size": 9,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f31edc791edb1f10",
            "tags": {
              "Name": "app-server1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c012741fdf9ea354"
            ]
          },
          "dependencies": [
            "aws_instance.bashton",
            "aws_key_pair.myBashtonKey",
            "aws_security_group.allow-ssh",
            "aws_subnet.priv-subnet-4",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:963489515162:instance/i-0321cc036a498e0bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0321cc036a498e0bd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myBashtonKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e3b30ed3c4854156",
            "private_dns": "ip-10-0-5-220.ec2.internal",
            "private_ip": "10.0.5.220",
            "public_dns": "ec2-52-87-208-186.compute-1.amazonaws.com",
            "public_ip": "52.87.208.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0558169ab75839c85",
                "volume_size": 9,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b3d1b1f39b34de26",
            "tags": {
              "Name": "app-server2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c012741fdf9ea354"
            ]
          },
          "dependencies": [
            "aws_instance.bashton",
            "aws_key_pair.myBashtonKey",
            "aws_security_group.allow-ssh",
            "aws_subnet.priv-subnet-5",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bashton",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:963489515162:instance/i-0e533442a9bf7f05a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e533442a9bf7f05a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myBashtonKey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02e3786efc20d01c0",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_ip": "10.0.1.170",
            "public_dns": "ec2-3-91-56-17.compute-1.amazonaws.com",
            "public_ip": "3.91.56.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f2a115cde5ef816b",
                "volume_size": 9,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec46281072c77289",
            "tags": {
              "Name": "jump-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c012741fdf9ea354"
            ]
          },
          "dependencies": [
            "aws_key_pair.myBashtonKey",
            "aws_security_group.allow-ssh",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "raytech_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:internet-gateway/igw-02874566736490d26",
            "id": "igw-02874566736490d26",
            "owner_id": "963489515162",
            "tags": {
              "Name": "raytech_IGW"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "raytech_natGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001a473fa2df55b15",
            "id": "nat-09fab972e41bc1381",
            "network_interface_id": "eni-03a7f26bdc6d272ee",
            "private_ip": "10.0.1.91",
            "public_ip": "174.129.7.234",
            "subnet_id": "subnet-0ec46281072c77289",
            "tags": {
              "name": "raytech_nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.raytech_IGW",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raytech_privRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b374cb2b6eff0bfe",
            "owner_id": "963489515162",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09fab972e41bc1381",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "raytech_privRT"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.raytech_IGW",
            "aws_nat_gateway.raytech_natGW",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "raytech_pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c8b8d4bc81549229",
            "owner_id": "963489515162",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02874566736490d26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raytech_pubRT"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_internet_gateway.raytech_IGW",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09554b877bbb0cbce",
            "route_table_id": "rtb-0b374cb2b6eff0bfe",
            "subnet_id": "subnet-0f31edc791edb1f10"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.raytech_IGW",
            "aws_nat_gateway.raytech_natGW",
            "aws_route_table.raytech_privRT",
            "aws_subnet.priv-subnet-4",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-subnet-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06832c8d6115c3335",
            "route_table_id": "rtb-0b374cb2b6eff0bfe",
            "subnet_id": "subnet-0b3d1b1f39b34de26"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.raytech_IGW",
            "aws_nat_gateway.raytech_natGW",
            "aws_route_table.raytech_privRT",
            "aws_subnet.priv-subnet-5",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-subnet-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038b975ee8987667f",
            "route_table_id": "rtb-0b374cb2b6eff0bfe",
            "subnet_id": "subnet-0a5a0f5cf4d962c98"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.raytech_IGW",
            "aws_nat_gateway.raytech_natGW",
            "aws_route_table.raytech_privRT",
            "aws_subnet.priv-subnet-6",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce5140f9d6345a60",
            "route_table_id": "rtb-0c8b8d4bc81549229",
            "subnet_id": "subnet-0ec46281072c77289"
          },
          "dependencies": [
            "aws_internet_gateway.raytech_IGW",
            "aws_route_table.raytech_pubRT",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781da7ca70f10904",
            "route_table_id": "rtb-0c8b8d4bc81549229",
            "subnet_id": "subnet-09cde3941b3dbbdbf"
          },
          "dependencies": [
            "aws_internet_gateway.raytech_IGW",
            "aws_route_table.raytech_pubRT",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a8c02e83723d06f",
            "route_table_id": "rtb-0c8b8d4bc81549229",
            "subnet_id": "subnet-02ce88e017ee9cc78"
          },
          "dependencies": [
            "aws_internet_gateway.raytech_IGW",
            "aws_route_table.raytech_pubRT",
            "aws_subnet.pub-subnet-3",
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:security-group/sg-0c012741fdf9ea354",
            "description": "security group that allow ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c012741fdf9ea354",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "963489515162",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:subnet/subnet-0f31edc791edb1f10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f31edc791edb1f10",
            "map_public_ip_on_launch": true,
            "owner_id": "963489515162",
            "tags": {
              "Name": "priv-sub_us-east-1a"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:subnet/subnet-0b3d1b1f39b34de26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0b3d1b1f39b34de26",
            "map_public_ip_on_launch": true,
            "owner_id": "963489515162",
            "tags": {
              "Name": "priv-sub_us-east-1b"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv-subnet-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:subnet/subnet-0a5a0f5cf4d962c98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0a5a0f5cf4d962c98",
            "map_public_ip_on_launch": true,
            "owner_id": "963489515162",
            "tags": {
              "Name": "priv-sub_us-east-1c"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:subnet/subnet-0ec46281072c77289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ec46281072c77289",
            "map_public_ip_on_launch": true,
            "owner_id": "963489515162",
            "tags": {
              "Name": "pub-sub_us-east-1a"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:subnet/subnet-09cde3941b3dbbdbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09cde3941b3dbbdbf",
            "map_public_ip_on_launch": true,
            "owner_id": "963489515162",
            "tags": {
              "Name": "pub-sub_us-east-1b"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:subnet/subnet-02ce88e017ee9cc78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02ce88e017ee9cc78",
            "map_public_ip_on_launch": true,
            "owner_id": "963489515162",
            "tags": {
              "Name": "pub-sub_us-east-1c"
            },
            "vpc_id": "vpc-08b2460fc1ca35c5c"
          },
          "dependencies": [
            "aws_vpc.raytech_prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raytech_prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:963489515162:vpc/vpc-08b2460fc1ca35c5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07831283718ff18f0",
            "default_route_table_id": "rtb-01e4e41964018e11d",
            "default_security_group_id": "sg-01dd2c3a41932a6ec",
            "dhcp_options_id": "dopt-dce858a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08b2460fc1ca35c5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e4e41964018e11d",
            "owner_id": "963489515162",
            "tags": {
              "Name": "raytech_prod-vpc"
            }
          }
        }
      ]
    }
  ]
}